--- a/index.html
+++ b/index.html
@@ -6,12 +6,18 @@
   <title>3 ways for Http Request</title>
   <link rel="stylesheet" href="app.css">
   <script src="xhr.js" defer></script>
+  <script src="fetch.js" defer></script>
 </head>
 <body>
   <section class="control-center">
     <h3>XMLHttpRequest</h3>
     <button id="xhr-get-btn">GET Data</button>
     <button id="xhr-post-btn">POST Data</button>
+  </section>
+  <section class="control-center">
+    <h3>Fetch</h3>
+    <button id="fetch-get-btn">GET Data</button>
+    <button id="fetch-post-btn">POST Data</button>
   </section>
 </body>
 </html>
