--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="app.css">
   <script src="xhr.js" defer></script>
   <script src="fetch.js" defer></script>
+  <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
+  <script src="axios.js" defer></script>
 </head>
 <body>
   <section class="control-center">
@@ -18,6 +20,11 @@
     <h3>Fetch</h3>
     <button id="fetch-get-btn">GET Data</button>
     <button id="fetch-post-btn">POST Data</button>
+  </section>
+  <section class="control-center">
+    <h3>Axios</h3>
+    <button id="axios-get-btn">GET Data</button>
+    <button id="axios-post-btn">POST Data</button>
   </section>
 </body>
 </html>
